[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/InGame/InGameManager.gd" type="Script" id=1]
[ext_resource path="res://Menus/InGame/UseSavedCard/UseSavedCardPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/InGame/CardStash/CardStashPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/InGame/MainGamePanel/MainGamePanel.tscn" type="PackedScene" id=4]

[node name="InGameManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainGamePanel" parent="." instance=ExtResource( 4 )]

[node name="CardStashPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="UseSavedCardPanel" parent="." instance=ExtResource( 2 )]
visible = false
